# app-flow

./: .gitignore  .gitmodules  Makefile  README.md  ledger_app.toml
.doxygen/: Doxyfile
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  codeql_checks.yml  documentation_generation.yml  js_tests.yml  misspellings_checks.yml  python_client_checks.yml  unit_tests.yml
docs/: APDUSPEC.md
js/: README.md  package.json
js/src/: index.js  serializePath.js  signTransaction.js
js/test/: test.js
src/: account.c  account.h  addr.c  addr.h  apdu_handler.c  coin.h  crypto.c  crypto.h  hdpath.c  hdpath.h  menu_handler.c  message.c  message.h  parser_common.h  parser_impl.c  parser_impl.h  parser_tx.c  parser_tx.h  parser_txdef.h  rlp.c  rlp.h  script_parser.c  script_parser.h  template_hashes.h  tx_metadata.c  tx_metadata.h
src/common/: actions.c  actions.h  app_helper.c  app_helper.h  app_main.h  main.c  tx.c  tx.h
src/json/: json_parser.c  json_parser.h
tests/: conftest.py  manifestPayloadCases.json  requirements.txt  test_app_mainmenu.py  test_error_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_slots.py  test_version.py  usage.md  utils.py
tests/application_client/: flow_command_sender.py  flow_response_unpacker.py  txMerkleTree.py
transaction_metadata/: index.js  txMerkleTree.js  txMerkleTree.mjs  txMerkleTree.py  usage.md
transaction_metadata/tests/: index.js
transaction_metadata/testvectors/: invalidEnvelopeCases.json  invalidPayloadCases.json  manifestEnvelopeCases.json  manifestPayloadCases.json  validEnvelopeCases.json  validPayloadCases.json
transaction_metadata/tree/: index.js
unit-tests/: CMakeLists.txt  parser.c  test_rlp.c  test_script_parser.c  test_tx_metadata.c
unit-tests/utils/: mocks.c  sha256.c
